Fix Sonar bugs and code smell
Not all of them (i'm not crazy)